--- a/Models/JS/map.html
+++ b/Models/JS/map.html
@@ -56,12 +56,12 @@ and open the template in the editor.
         gameArea.start();
         //player
         var playerSpriteImage = new Image();
-        playerSpriteImage.src = "/opt/lampp/htdocs/hashtagzombies/Media/Sprites/KevinHumanman.png";
+        playerSpriteImage.src = "Media/Sprites/KevinHumanman.png";
         playerSprite = new component(playerSpriteImage, 32, 65, 32, 32, 32, 32, 32, 32);
         var floorTileImage = new Image();
-        floorTileImage.src = "/opt/lampp/htdocs/hashtagzombies/Media/Sprites/FloorTile1.bmp";
+        floorTileImage.src = "Media/Sprites/FloorTile1.bmp";
         var wallTileImage = new Image();
-        wallTileImage.src = "/opt/lampp/htdocs/hashtagzombies/Media/Sprites/WallTile1.bmp";
+        wallTileImage.src = "Media/Sprites/WallTile1.bmp";
         //map elements
         var mapIndex = 0;
         for (var y = 0; y <= 19; y++) {
