--- a/Models/JS/map.html
+++ b/Models/JS/map.html
@@ -27,8 +27,8 @@ and open the template in the editor.
       var enemies = [];
       var blockW = 32;
       var blockH = 32;
-      var mapWidth = 26;
-      var mapHeight = 20;
+      var mapWidth = 38;
+      var mapHeight = 25;
       var CWIDTH = mapWidth*blockW;
       var CHEIGHT = mapHeight*blockH;
       var rounds = [];
@@ -38,6 +38,7 @@ and open the template in the editor.
       var zombies = [];
       var killCount = 0;
       var zombFrame = 0;
+      var hCount = 0;
       //make map
       // comment below prevents formatting from messing up the 38x25 map matrix
       // prettier-ignore
@@ -352,11 +353,18 @@ and open the template in the editor.
             playerSprite.y >= zombies[n].y && playerSprite.y <= (zombies[n].y + zombies[n].width) && 
             (playerSprite.y + playerSprite.width) >= zombies[n].y && (playerSprite.y + playerSprite.width) <= (zombies[n].y + zombies[n].width) &&
             (playerSprite.x + playerSprite.width) >= zombies[n].x && (playerSprite.x + playerSprite.width) <= (zombies[n].x + zombies[n].width)){
-              playerSprite.health--;
+              if (hCount === 0){
+                playerSprite.health--;
+              } 
+              hCount++;
+              if (hCount >= 30){
+                hCount = 0;
+              }
               if (playerSprite.health === 0){
                 clearInterval(gameArea.interval);
               }
               console.log(playerSprite.health);
+              
             }
           }
           if (zombFrame % 2 === 0){
