Adding fix to styling not affecting the UI table below the canvas.

--- a/Models/JS/map.html
+++ b/Models/JS/map.html
@@ -15,7 +15,7 @@ and open the template in the editor.
       }
     </style>
     <script src="Models/JS/bullet.js"></script>
-    <link href="/styling.css" rel="stylesheet" type="text/css" />
+    <link href="styling.css" rel="stylesheet" type="text/css" />
   </head>
   <body onload="startGame()" class="zombies_body_gameplay_container">
     <script>
