correct map transition

--- a/Models/JS/map.html
+++ b/Models/JS/map.html
@@ -30,8 +30,8 @@
       //make map
       // comment below prevents formatting from messing up the 38x25 map matrix
       // prettier-ignore
-      
-      var map = mapName['mapArray'];
+      var mapName = "concourse";
+      var map = concourse['mapArray'];
 
       //Create game canvas and load game area.
       function startGame() {
