--- a/Models/JS/map.html
+++ b/Models/JS/map.html
@@ -526,7 +526,8 @@
               playerSpawnY = 64;
               zombies = [];
               obstacles = [];
-              playerSprite.health = charHP;
+              playerSprite.health = 100;
+              charHP = 100;
               startGame(); 
             }
           }
